# dotfiles

./: .bashrc  .gitignore  .zshrc
.config/: black  starship.toml
.config/bat/: config
.config/ghostty/: config
.config/kitty/: kitty.conf  session.conf  zoom_toggle.py
.config/nvim/: init.lua
.config/nvim/lua/: autocommands.lua  filetypes.lua  functions.lua  globals.lua  keymap.lua  lazy-nvim.lua  options.lua  settings.lua
.config/nvim/lua/plugins/: colorscheme.lua  conform.lua  copilot-chat.lua  copilot.lua  kitty-scrollback.lua  lualine-nvim.lua  nvim-lint.lua  nvim-treesitter-playground.lua  nvim-treesitter.lua  vim-go.lua
.config/nvim/queries/gotmpl/: injections.scm
.config/nvim/queries/jinja2/: highlights.scm  injections.scm
.config/ruff/: pyproject.toml
.config/yamllint/: config
